[package]
name = "regc"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/823984418/regc"
categories = ["memory-management"]
keywords = ["gc"]
description = "A garbage collector that mixes Reference counting and mark sweeping"
license = "MIT OR Apache-2.0"
authors = ["823984418@qq.com"]

[dependencies]
log = "0.4.18"

[dev-dependencies]
env_logger = "0.10.0"
